src/hoppet/fortran_prototypes.h

#define DEFINE_RETURN_INT_MEMBER(classname, membername)           extern "C" int            hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_LOG_MEMBER(classname, membername)           extern "C" bool           hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_DBL_MEMBER(classname, membername)           extern "C" double         hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_INT_MEMBER_I(classname, membername)         extern "C" int            hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i);
#define DEFINE_RETURN_DBL_MEMBER_I(classname, membername)         extern "C" double         hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i);
#define DEFINE_RETURN_OBJ_MEMBER(classname, membername, typename) extern "C" typename##_f * hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_OBJ_MEMBER_I( classname, membername, typename) extern "C" typename##_f * hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i);
#define DEFINE_DELETE(classname) \
   extern "C" void hoppet_cxx__##classname##__delete(classname##_f ** ptr); \
   inline void generic_delete(classname##_f * ptr) {if (ptr) hoppet_cxx__##classname##__delete(&ptr);}
DEFINE_RETURN_DBL_MEMBER(grid_def,dy)
DEFINE_RETURN_DBL_MEMBER(grid_def,ymax)
DEFINE_RETURN_DBL_MEMBER(grid_def,eps)
DEFINE_RETURN_INT_MEMBER(grid_def,nsub)
DEFINE_RETURN_INT_MEMBER(grid_def,order)
DEFINE_RETURN_LOG_MEMBER(grid_def,locked)
DEFINE_RETURN_OBJ_MEMBER_I(grid_def,subgd,grid_def)
DEFINE_RETURN_INT_MEMBER_I(grid_def,subiy)
inline void generic_delete(grid_def_f * ptr) {if (ptr) hoppet_cxx__grid_def__delete(&ptr);}
DEFINE_DELETE(grid_conv)
//inline void generic_delete(grid_conv_f * ptr) {if (ptr)hoppet_cxx__grid_conv__delete(&ptr);}
inline grid_conv_f * generic_copy(const grid_conv_f * ptr) {return hoppet_cxx__grid_conv__new_from_gc(ptr);}
//  if (ptr)  return hoppet_cxx__grid_conv__new_from_gc(ptr); else return nullptr;}
DEFINE_RETURN_OBJ_MEMBER(grid_conv,grid,grid_def)
DEFINE_RETURN_OBJ_MEMBER_I(grid_conv,subgc,grid_conv)


/// split_mat function wrappers
extern "C" {
DEFINE_COPY(mass_threshold_mat)
DEFINE_DELETE(mass_threshold_mat)

#define MTM_REF(NAME)  DEFINE_RETURN_OBJ_MEMBER(mass_threshold_mat,NAME,split_mat)
DEFINE_DELETE(dglap_holder)
DEFINE_RETURN_INT_MEMBER(dglap_holder,nloop)
DEFINE_RETURN_INT_MEMBER(dglap_holder,nf)
DEFINE_RETURN_INT_MEMBER(dglap_holder,factscheme)
DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allp,split_mat)
DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allmtm,mass_threshold_mat)

DEFINE_RETURN_OBJ_MEMBER(dglap_holder,grid,grid_def)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_lo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nlo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nnlo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_n3lo,split_mat)

//----- things for pdfseginfo ----------
DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_lo)
DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_hi)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_lo)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_hi)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,dlnlnQ)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,inv_dlnlnQ)

//----- things for pdf_table ----------
extern "C" {
  void     hoppet_cxx__pdf_table__evolve(pdf_table_f *tab, double q0, const double * pdf_at_q0,
                                         const dglap_holder_f *dh, const running_coupling_f *coupling, 
                                         double mur_over_q, int nloop, _Bool untie_nf);
  void     hoppet_cxx__pdf_table__pre_evolve(pdf_table_f *tab, double q0, 
                                         const dglap_holder_f *dh, const running_coupling_f *coupling, 
                                         double mur_over_q, int nloop, _Bool untie_nf);
  void     hoppet_cxx__pdf_table__evolve_frompre(pdf_table_f *tab, const double * pdf_at_q0);
  void hoppet_cxx__pdf_table__write_lhapdf(const pdf_table_f * tab, const running_coupling_f * coupling, 
                                           const char * filename_cstr, int pdf_index, const int * iy_increment = nullptr, 
                                           const int * n_flav = nullptr, const int * flav_indices = nullptr, 
                                           const int * flav_pdg_ids = nullptr, const double * flav_rescale = nullptr);
DEFINE_COPY(pdf_table)
DEFINE_DELETE(pdf_table)

DEFINE_RETURN_OBJ_MEMBER(pdf_table,grid,grid_def)
DEFINE_RETURN_INT_MEMBER(pdf_table,nQ)
DEFINE_RETURN_INT_MEMBER(pdf_table,tab_iflv_max)
DEFINE_RETURN_INT_MEMBER(pdf_table,lnlnQ_order)
DEFINE_RETURN_LOG_MEMBER(pdf_table,freeze_at_Qmin)
DEFINE_RETURN_LOG_MEMBER(pdf_table,nf_info_associated)
DEFINE_RETURN_INT_MEMBER(pdf_table,nflo)
DEFINE_RETURN_INT_MEMBER(pdf_table,nfhi)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_min)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_max)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lambda_eff)
DEFINE_RETURN_DBL_MEMBER(pdf_table,dlnlnQ)
DEFINE_RETURN_OBJ_MEMBER(pdf_table,seginfo_no_nf,pdfseginfo)

DEFINE_RETURN_OBJ_MEMBER_I(pdf_table,seginfo,pdfseginfo)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,as2pi)
DEFINE_RETURN_INT_MEMBER_I(pdf_table,nf_int)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,lnlnQ_vals)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,Q_vals)

//----- things for pdf_table arrays ----------
extern "C" {
  void hoppet_cxx__pdf_table_array__new(int sz, pdf_table_array_f **ptr, pdf_table_f **table0_ptr);
  
  pdf_table_f * hoppet_cxx__pdf_tables__table_i(const pdf_table_f * arr_start, int sz, int i);
DEFINE_DELETE(pdf_table_array)

//----- generic functions 
extern "C" {