src/hoppet_cxx_oo.F90


    call c_f_pointer(obj, obj_f)
    res = EvalPdfTable_yQf(obj_f, y, Q, iflv_cxx + ncompmin)
  end function

  !! fill res with the interpolation of the pdf table at (y,Q) for all iflv up to and including iflv_max
  subroutine hoppet_cxx__pdf_table__at_yQ_into(obj, y, Q, res) bind(C)
    use pdf_representation
    implicit none
    type(c_ptr), intent(in), value :: obj
    real(c_double), intent(in), value :: y, Q
    real(c_double), intent(out) :: res(*)
    type(pdf_table), pointer :: obj_f
    integer, parameter :: iflv_max_offset = - ncompmin + 1

    call c_f_pointer(obj, obj_f)
    call EvalPdfTable_yQ(obj_f, y, Q, res( 1:obj_f%tab_iflv_max+iflv_max_offset ) )
  end subroutine

  !! carry out the evolution
  subroutine hoppet_cxx__pdf_table__evolve(tab, &
              Q0, pdf_at_Q0, &
              dh, coupling, muR_over_Q, nloop, untie_nf) bind(C)
    use, intrinsic :: iso_c_binding
    use qcd_coupling,    only: running_coupling
    use dglap_holders,   only: dglap_holder
    implicit none
    type(c_ptr), intent(in), value :: tab
    real(c_double), intent(in), value :: Q0
    type(c_ptr), intent(in), value :: pdf_at_Q0
    type(c_ptr), intent(in), value :: dh, coupling
    real(c_double), intent(in), value :: muR_over_Q
    integer(c_int), intent(in), value :: nloop
    logical(c_bool), intent(in), value :: untie_nf
    !-----------
    real(c_double), pointer :: pdf_at_Q0_f(:,:)
    type(pdf_table), pointer        :: tab_f
    type(running_coupling), pointer :: coupling_f
    type(dglap_holder), pointer    :: dh_f
    logical :: untie_nf_f

    call c_f_pointer(tab, tab_f)
    call c_f_pointer(pdf_at_Q0, pdf_at_Q0_f, shape=[size(tab_f%tab,1), size(tab_f%tab,2)])
    call c_f_pointer(coupling, coupling_f)
    call c_f_pointer(dh, dh_f)
    untie_nf_f = (untie_nf .neqv. .false._c_bool) ! safely convert to fortran logical

    call EvolvePdfTable(tab_f, &
                        Q0, pdf_at_Q0_f, &
                        dh_f, coupling_f, muR_over_Q, nloop, untie_nf=untie_nf_f)
  end subroutine hoppet_cxx__pdf_table__evolve

  !! pre-evolve: set up evolution operators but do not apply them
  subroutine hoppet_cxx__pdf_table__pre_evolve(tab, &
              Q0, &
              dh, coupling, muR_over_Q, nloop, untie_nf) bind(C)
    use, intrinsic :: iso_c_binding
    use qcd_coupling,    only: running_coupling
    use dglap_holders,   only: dglap_holder
    implicit none
    type(c_ptr), intent(in), value :: tab
    real(c_double), intent(in), value :: Q0
    type(c_ptr), intent(in), value :: dh, coupling
    real(c_double), intent(in), value :: muR_over_Q
    integer(c_int), intent(in), value :: nloop
    logical(c_bool), intent(in), value :: untie_nf
    !-----------
    type(pdf_table), pointer        :: tab_f
    type(running_coupling), pointer :: coupling_f
    type(dglap_holder), pointer    :: dh_f
    logical :: untie_nf_f

    call c_f_pointer(tab, tab_f)
    call c_f_pointer(coupling, coupling_f)
    call c_f_pointer(dh, dh_f)
    untie_nf_f = (untie_nf .neqv. .false._c_bool) ! safely convert to fortran logical

    call PreEvolvePdfTable(tab_f, &
                        Q0, &
                        dh_f, coupling_f, muR_over_Q, nloop, untie_nf=untie_nf_f)
  end subroutine hoppet_cxx__pdf_table__pre_evolve


  !! carry out the evolution
  subroutine hoppet_cxx__pdf_table__evolve_frompre(tab,pdf_at_Q0) bind(C)
    use, intrinsic :: iso_c_binding
    use qcd_coupling,    only: running_coupling
    use dglap_holders,   only: dglap_holder
    implicit none
    type(c_ptr), intent(in), value :: tab
    type(c_ptr), intent(in), value :: pdf_at_Q0
    !-----------
    real(c_double), pointer :: pdf_at_Q0_f(:,:)
    type(pdf_table), pointer        :: tab_f

    call c_f_pointer(tab, tab_f)
    call c_f_pointer(pdf_at_Q0, pdf_at_Q0_f, shape=[size(tab_f%tab,1), size(tab_f%tab,2)])

    call EvolvePdfTable(tab_f, pdf_at_Q0_f)
  end subroutine 

  !! interface to write LHAPDF format files
  subroutine hoppet_cxx__pdf_table__write_lhapdf(table, coupling, basename, pdf_index, &
                                 & iy_increment, &
                                 & n_flav, flav_indices, flav_pdg_ids, flav_rescale) bind(C)                                
    use qcd_coupling,    only: running_coupling
    use hoppet_c_f_string_utils
    use warnings_and_errors
    implicit none
    type(c_ptr),    intent(in), value :: table
    type(c_ptr),    intent(in), value :: coupling
    type(c_ptr),    intent(in), value :: basename
    integer(c_int), intent(in), value :: pdf_index
    integer(c_int), intent(in), optional :: iy_increment
    integer(c_int), intent(in), optional :: n_flav !! the size of the flav_indices, etc. arrays
    type(c_ptr),    intent(in)           :: flav_indices !! integer array
    type(c_ptr),    intent(in)           :: flav_pdg_ids !! integer array
    type(c_ptr),    intent(in)           :: flav_rescale !! real(c_double) array
    !--
    type(pdf_table), pointer        :: table_f
    type(running_coupling), pointer :: coupling_f
    character(len=:), allocatable :: basename_f
    integer, pointer :: flav_indices_f(:)
    integer, pointer :: flav_pdg_ids_f(:)
    real(dp), pointer :: flav_rescale_f(:)

    call c_f_pointer(table, table_f)
    call c_f_pointer(coupling, coupling_f)
    basename_f = fortran_string_from_cstr(basename)
    if (present(n_flav)) then
      if (.not. c_associated(flav_indices) .or. &
          .not. c_associated(flav_pdg_ids) .or. &
          .not. c_associated(flav_rescale)) then
        call wae_error("hoppet_cxx__pdf_table__write_lhapdf: "//&
                      "if n_flav is present, flav_indices, flav_pdg_ids and flav_rescale must also be present")
      end if
      call c_f_pointer(flav_indices, flav_indices_f, shape=[n_flav])
      call c_f_pointer(flav_pdg_ids, flav_pdg_ids_f, shape=[n_flav])
      call c_f_pointer(flav_rescale, flav_rescale_f, shape=[n_flav])
      call WriteLHAPDFFromPdfTable(table_f, coupling_f, basename_f, pdf_index, &
                                iy_increment=iy_increment, &
                                flav_indices = flav_indices_f, &
                                flav_pdg_ids = flav_pdg_ids_f, flav_rescale = flav_rescale_f)
    else
      call WriteLHAPDFFromPdfTable(table_f, coupling_f, basename_f, pdf_index, &
                                iy_increment=iy_increment)
    end if
  end subroutine hoppet_cxx__pdf_table__write_lhapdf


  DEFINE_DELETE(pdf_table)

  ! think carefully which of these interfaces should be public, which perhaps renamed
  DEFINE_RETURN_OBJ_MEMBER(pdf_table,grid,grid_def)
  DEFINE_RETURN_INT_MEMBER(pdf_table,nQ)
  DEFINE_RETURN_INT_MEMBER(pdf_table,tab_iflv_max)
  DEFINE_RETURN_INT_MEMBER(pdf_table,lnlnQ_order)
  DEFINE_RETURN_LOG_MEMBER(pdf_table,freeze_at_Qmin)
  DEFINE_RETURN_LOG_MEMBER(pdf_table,nf_info_associated)
  DEFINE_RETURN_INT_MEMBER(pdf_table,nflo)
  DEFINE_RETURN_INT_MEMBER(pdf_table,nfhi)
  DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_min)
  DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_max)
  DEFINE_RETURN_DBL_MEMBER(pdf_table,lambda_eff)
  DEFINE_RETURN_DBL_MEMBER(pdf_table,dlnlnQ)
  DEFINE_RETURN_OBJ_MEMBER(pdf_table,seginfo_no_nf,pdfseginfo)


  DEFINE_RETURN_OBJ_MEMBER_I(pdf_table,seginfo,pdfseginfo)
  DEFINE_RETURN_DBL_MEMBER_I(pdf_table,as2pi)
  DEFINE_RETURN_DBL_MEMBER_I(pdf_table,lnlnQ_vals)
  DEFINE_RETURN_DBL_MEMBER_I(pdf_table,Q_vals)
  DEFINE_RETURN_INT_MEMBER_I(pdf_table,nf_int)
end module hoppet_cxx_oo_pdf_table

!=====================================================================
!! wrappers for C++ OO interface to grid quantities, with an intermediate
!! grid_quant type holds both the data and the grid_def
module hoppet_cxx_oo_pdf_table_array
  use types, only: dp
  use, intrinsic :: iso_c_binding
  use pdf_tabulate
  implicit none

  type pdf_table_array
    type(pdf_table), pointer :: tables(:) => null()
  end type pdf_table_array

contains

  !! create a pdf_table_array of the specified size and set up pointers
  !! to the pdf_table_array and to its tables(0) element
  subroutine hoppet_cxx__pdf_table_array__new(sz, ptr, table0_ptr) bind(C)
    implicit none
    integer(c_int), intent(in), value :: sz !< size of the array
    type(c_ptr), intent(out) :: ptr         !< pointer to the pdf_table_array object
    type(c_ptr), intent(out) :: table0_ptr  !< pointer to zeroth element of pdf_table_array
    type(c_ptr) :: res
    !--
    type(pdf_table_array), pointer :: ptr_f

    allocate(ptr_f)
    allocate(ptr_f%tables(0:sz-1))
    ptr = c_loc(ptr_f)
    table0_ptr = c_loc(ptr_f%tables(0))
  end subroutine hoppet_cxx__pdf_table_array__new

  !! delete a pdf_table_array created with hoppet_cxx__pdf_table_array__new
  subroutine hoppet_cxx__pdf_table_array__delete(ptr) bind(C)
    implicit none
    type(c_ptr), intent(out) :: ptr         !< pointer to the pdf_table_array object
    !--
    type(pdf_table_array), pointer :: ptr_f

    call c_f_pointer(ptr, ptr_f)
    call Delete(ptr_f%tables) ! clean up the storage in each pdf_table
    deallocate(ptr_f%tables)  ! deallocate the array of pdf_table pointers 
    deallocate(ptr_f)         ! deallocate the pdf_table_array itself
    ptr = c_null_ptr
  end subroutine hoppet_cxx__pdf_table_array__delete

  function hoppet_cxx__pdf_tables__table_i(ptr, sz, i) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value :: ptr !< pointer to zeroth element of pdf_table_array
    integer(c_int), intent(in), value :: sz  !< size of the array
    integer(c_int), intent(in), value :: i   !< index of the desired pdf_table (zero-indexed)
    type(c_ptr) :: res
    !--
    type(pdf_table), pointer :: ptr_f(:)

    call c_f_pointer(ptr, ptr_f, shape=[sz])
    ! i is zero indexed in C++, but Fortran arrays from c_f_pointer are one-indexed
    ! (and this can be changed only from Fortran 2023, which we are not yet using)
    res = c_loc(ptr_f(i+1))
  end function 

end module hoppet_cxx_oo_pdf_table_array
